2020-04-14  Mattias Engdegård  <mattiase@acm.org>

	* tramp.el (tramp-use-absolute-autoload-file-names):
	Replace ^ and $ with \` and \', respectively.

2020-04-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-action-process-alive): Read pending output.

2020-04-01  Michael Albinus  <michael.albinus@gmx.de>

	* trampver.el.in (tramp-repository-branch)
	(tramp-repository-version): Bind `debug-on-error' to nil.

2020-03-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3.3 released.

2020-03-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-adb.el (tramp-adb-handle-write-region):
	* tramp-smb.el (tramp-smb-handle-write-region): Flush the cache
	after the file has been written.

2020-03-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-sh-handle-write-region): Copy to temp file
	only if FILENAME exists.  (Bug#40156)

2020-02-27  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3.2 released.

	* tramp.el (tramp-handle-file-modes):
	* tramp-adb.el (tramp-adb-handle-set-file-modes)
	(tramp-adb-handle-set-file-times):
	* tramp-gvfs.el (tramp-gvfs-handle-set-file-modes)
	(tramp-gvfs-handle-set-file-times):
	* tramp-sh.el (tramp-sh-handle-set-file-modes)
	(tramp-sh-handle-set-file-times):
	* tramp-smb.el (tramp-smb-handle-set-file-modes):
	* tramp-sudoedit.el (tramp-sudoedit-handle-set-file-modes):
	(tramp-sudoedit-handle-set-file-times): Add optional _FLAG.

2020-02-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-interrupt-process): Improve command.

2020-02-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-read-passwd):
	Use `tramp-compat-temporary-file-directory'.  (Bug#39389, Bug#39489)

2020-02-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-shell-command): Fix `window-start' in
	output buffer.  (Bug#39171)

2020-02-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-open-shell): Read prompt when moving "~/.editrc".
