@@ -1,3 +1,11 @@
+2020-04-22  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-smb.el (tramp-smb-conf): Fix docstring.
+	(tramp-smb-options): New defcustom.
+	(tramp-smb-handle-copy-directory, tramp-smb-handle-file-acl)
+	(tramp-smb-handle-set-file-acl, tramp-smb-maybe-open-connection):
+	Use it.
+
 2020-04-14  Mattias Engdegård  <mattiase@acm.org>
 
 	* tramp.el (tramp-use-absolute-autoload-file-names):
